--- a/src/app/pages/clima/clima.html
+++ b/src/app/pages/clima/clima.html
@@ -4,4 +4,9 @@
         <h1 class="app-name">{{ appName }}</h1>
         <p class="tagline">{{ tagline }}</p>
     </div>
+
+    <!-- <button (click)="pesquisar()" class="btn-redirect">Pesquisar</button> -->
+
+    <button (click)="pesquisar()" class="button-51" role="button">Pesquisar</button>
+
 </div>
