--- a/src/app/pages/clima/clima.scss
+++ b/src/app/pages/clima/clima.scss
@@ -1,6 +1,9 @@
-
+* {
+    font-family: Arial, sans-serif;
+}
 
 .clima-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,7 +11,6 @@
   height: 100vh;
   text-align: center;
 //   background: linear-gradient(to bottom, #87ceeb, #f0f8ff); /* céu azul */
-  font-family: Arial, sans-serif;
 }
 
 .content {
@@ -47,4 +49,64 @@
   margin-top: 10px;
 }
 
+// .btn-redirect {
+//   position: relative;
+//   margin-top: 3.5rem;
+//   width: 160px;
+//   height: calc((100% + 40px) - 100%);
+//   border-radius: 20px;
+//   font-size: 1.1rem;
 
+//   &:hover {
+//     cursor: pointer;
+//     transform: scale(1.2);
+//     transition: all 0.2s;
+//   }
+// }
+
+.button-51 {
+  margin-top: 5.5rem;
+  background-color: transparent;
+  border: 1px solid #266DB6;
+  box-sizing: border-box;
+  color: #00132C;
+  font-family: "Avenir Next LT W01 Bold",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  padding: 16px 23px;
+  position: relative;
+  text-decoration: none;
+}
+
+.button-51:hover,
+.button-51:active {
+  outline: 0;
+}
+
+.button-51:hover {
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.button-51:before {
+  background-color: #D5EDF6;
+  content: "";
+  height: calc(100% + 3px);
+  position: absolute;
+  right: -7px;
+  top: -9px;
+  transition: background-color 300ms ease-in;
+  width: 100%;
+  z-index: -1;
+}
+
+.button-51:hover:before {
+  background-color: #6DCFF6;
+}
+
+@media (min-width: 768px) {
+  .button-51 {
+    padding: 16px 32px;
+  }
+}
