--- a/src/app/pages/clima/clima.html
+++ b/src/app/pages/clima/clima.html
@@ -1,12 +1,13 @@
 <div class="clima-container">
     <div class="content">
-        <div class="cloud-icon">☁️</div>
+        <!-- <div class="cloud-icon">☁️</div> -->
+        <!-- <div class="cloud-icon"><img src="/nuvem_borda_dourada.svg"></div> -->
         <h1 class="app-name">{{ appName }}</h1>
         <p class="tagline">{{ tagline }}</p>
     </div>
 
-    <!-- <button (click)="pesquisar()" class="btn-redirect">Pesquisar</button> -->
+    <button (click)="pesquisar()" class="btn-redirect">P<br>e<br>s<br>q<br>u<br>i<br>s<br>a<br>r</button>
 
-    <button (click)="pesquisar()" class="button-51" role="button">Pesquisar</button>
+    <!-- <button (click)="pesquisar()" class="button-51" role="button">Pesquisar</button> -->
 
 </div>
