--- a/src/app/pages/clima/clima.scss
+++ b/src/app/pages/clima/clima.scss
@@ -14,16 +14,24 @@
 }
 
 .content {
-    background: radial-gradient(circle, 
-        #ffff00 0%,     /* Amarelo */
-        #ffa500 25%,    /* Laranja */
-        #ff4500 50%,    /* Vermelho alaranjado */
-        #ff0000 75%,    /* Vermelho */
-        #8b0000 100%    /* Vermelho vinho */
-    );
+    // background: radial-gradient(circle, 
+    //     #ffff00 0%,     /* Amarelo */
+    //     #ffa500 25%,    /* Laranja */
+    //     #ff4500 50%,    /* Vermelho alaranjado */
+    //     #ff0000 75%,    /* Vermelho */
+    //     #8b0000 100%    /* Vermelho vinho */
+    // );
+    backdrop-filter: blur(10px);
     padding: 40px;
-    border-radius: 40px;
+    border-radius: 50px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+
+    &:hover {
+      position: relative;
+      top: -10px;
+      transform: scale(1.1);
+      transition: 0.6s ease;
+    }
 }
 
 .cloud-icon {
@@ -40,73 +48,83 @@
 .app-name {
   font-size: 3rem;
   margin: 0;
-  color: #fed;
+  color: #D3AF37;
 }
 
 .tagline {
   font-size: 1.2rem;
-  color: #fed;
+  color: #D3AF37;
   margin-top: 10px;
 }
 
-// .btn-redirect {
-//   position: relative;
-//   margin-top: 3.5rem;
-//   width: 160px;
-//   height: calc((100% + 40px) - 100%);
-//   border-radius: 20px;
-//   font-size: 1.1rem;
-
-//   &:hover {
-//     cursor: pointer;
-//     transform: scale(1.2);
-//     transition: all 0.2s;
-//   }
-// }
-
-.button-51 {
-  margin-top: 5.5rem;
-  background-color: transparent;
-  border: 1px solid #266DB6;
-  box-sizing: border-box;
-  color: #00132C;
-  font-family: "Avenir Next LT W01 Bold",sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 24px;
-  padding: 16px 23px;
+.btn-redirect {
   position: relative;
-  text-decoration: none;
-}
-
-.button-51:hover,
-.button-51:active {
-  outline: 0;
-}
-
-.button-51:hover {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60px;
+  height: calc((100% + 220px) - 100%);
+  border-radius: 20px;
+  border-color: #D3AF37;
+  font-size: 1.1rem;
+  top: -17.5rem;
+  left: 18.5rem;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  color: #D3AF37;
   background-color: transparent;
-  cursor: pointer;
-}
 
-.button-51:before {
-  background-color: #D5EDF6;
-  content: "";
-  height: calc(100% + 3px);
-  position: absolute;
-  right: -7px;
-  top: -9px;
-  transition: background-color 300ms ease-in;
-  width: 100%;
-  z-index: -1;
-}
-
-.button-51:hover:before {
-  background-color: #6DCFF6;
-}
-
-@media (min-width: 768px) {
-  .button-51 {
-    padding: 16px 32px;
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+    transform: translateY(-5px);
+    transition: all 0.2s;
   }
 }
+
+// .button-51 {
+//   margin-top: 5.5rem;
+//   background-color: transparent;
+//   border: 1px solid #266DB6;
+//   box-sizing: border-box;
+//   color: #00132C;
+//   font-family: "Avenir Next LT W01 Bold",sans-serif;
+//   font-size: 16px;
+//   font-weight: 700;
+//   line-height: 24px;
+//   padding: 16px 23px;
+//   position: relative;
+//   text-decoration: none;
+// }
+
+// .button-51:hover,
+// .button-51:active {
+//   outline: 0;
+// }
+
+// .button-51:hover {
+//   background-color: transparent;
+//   cursor: pointer;
+// }
+
+// .button-51:before {
+//   background-color: #D5EDF6;
+//   content: "";
+//   height: calc(100% + 3px);
+//   position: absolute;
+//   right: -7px;
+//   top: -9px;
+//   transition: background-color 300ms ease-in;
+//   width: 100%;
+//   z-index: -1;
+// }
+
+// .button-51:hover:before {
+//   background-color: #6DCFF6;
+// }
+
+// @media (min-width: 768px) {
+//   .button-51 {
+//     padding: 16px 32px;
+//   }
+// }
