--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,6 @@
 
 body {
     background: url('https://picsum.photos/1920/1080?random=1');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
