--- a/src/app/pages/clima/clima.html
+++ b/src/app/pages/clima/clima.html
@@ -2,22 +2,28 @@
     <div class="content">
         <!-- <div class="cloud-icon">☁️</div> -->
         <!-- <div class="cloud-icon"><img src="/nuvem_borda_dourada.svg"></div> -->
+        @if (dados_clima()) {
 
-        <div class="city"></div>
+            <h1 class="app-name">{{ dados_clima()?.name }}</h1>
 
-
-        <h1 class="app-name">{{ dados_clima()?.name }}</h1>
-
-        <div class="temp">{{dados_clima()?.main?.temp}}°C</div>
-        
-        <div class="img-central">
-            @if (dados_clima()) {
+            <div class="temp">{{dados_clima()?.main?.temp}}°C</div>
+            
+            <div class="img-central">
+                
                 @let clima = dados_clima()!.weather[0];
-                <!-- <img class="icon" [src]="'https://openweathermap.org/img/wn/' +clima.icon+ '@2x.png' "> -->
-                <!-- ESTA COMENTADO POR QUE EU ACHEI FEIO, MAS FUNCIONA -->
+                        <!-- <img class="icon" [src]="'https://openweathermap.org/img/wn/' +clima.icon+ '.png' "> -->
+                        <!-- ESTA COMENTADO POR QUE EU ACHEI FEIO, MAS FUNCIONA -->
                 <div class="desc">{{ clima.description | titlecase}}</div>
-            }
-        </div>
+
+                <div class="minmax">
+                    <span>Min {{dados_clima()?.main?.temp_min}}</span>
+                    <span>Max {{dados_clima()?.main?.temp_min}}</span>
+                </div>
+
+            </div>
+        } @else {
+            <div class="desc">Carregando...</div>
+        }
 
         <!-- <p class="tagline">{{ tagline }}</p> -->
     </div>
